prevent overflow

--- a/assets/js/base/components/chip/style.scss
+++ b/assets/js/base/components/chip/style.scss
@@ -6,6 +6,7 @@
 	color: $core-grey-dark-800;
 	border-radius: 0;
 	line-height: 1em;
+	max-width: 100%;
 
 	&.wc-block-components-chip--radius-small {
 		border-radius: 3px;
